--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^4.12.4",
     "mongoose-title-case": "0.0.4",
     "mongoose-validator": "^1.3.2",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "regex": "^0.1.1"
   }
 }
