--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.12.4",
-    "mongoose-title-case": "0.0.4",
-    "mongoose-validator": "^1.3.2",
-    "morgan": "^1.9.0",
-    "regex": "^0.1.1"
+    "morgan": "^1.9.0"
   }
 }
