--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
     "express": "^4.16.2",
+    "helmet": "^3.10.0",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.12.4",
+    "mongoose-validator": "^2.0.0",
     "morgan": "^1.9.0"
   }
 }
